# tm_activity_test

./: README.md
carlsim/: .gitignore  CMakeLists.txt  build_dir  generate_config_state.cpp
carlsim/src/: main_moradi_stp_compare.cpp
src/: HC_IM_05_26_aac_pyr_I_150pA_fast_1_slow_0.txt  compare_carlsim_keivan_stp_example.ipynb  sim.py  sim2.py  stp_compare_results.csv  tm_activity_test.m
src/.ipynb_checkpoints/: compare_carlsim_keivan_stp_example-checkpoint.ipynb
